--- a/package.yaml
+++ b/package.yaml
@@ -20,9 +20,12 @@ extra-source-files:
 description:         Please see the README on GitHub at <https://github.com/githubuser/advent2019#readme>
 
 dependencies:
-- base >= 4.7 && < 5
+- array
 - attoparsec
+- base >= 4.7 && < 5
 - bytestring
+- mtl
+- text
 
 library:
   source-dirs: src
